<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="label_upcoming_elections">Upcoming Elections</string>
    <string name="label_saved_selections">Saved Elections</string>
    <string name="label_find_my_representatives">Find my representatives</string>
    <string name="label_follow_election">follow election</string>
    <string name="label_unfollow_election">unfollow election</string>
    <string name="label_representative_search">Representative Search</string>
    <string name="label_address_line_1">Address Line 1</string>
    <string name="label_address_line_2">Address Line 2</string>
    <string name="label_city">City</string>
    <string name="label_zip">Zip</string>
    <string name="label_use_my_location">Use my location</string>
    <string name="label_my_representatives">My Representatives</string>

    <!-- TODO: Add necessary string values -->
    <string name="label_error">Error!.An expected error occurred.</string>
    <string name="label_political_preparedness">@string/app_name</string>
    <string name="label_election_information">Election Information</string>
    <string name="label_voting_locations">Voting Locations</string>
    <string name="label_ballot_information">Ballot Information</string>

</resources>
